--- a/Web_lr1/index.html
+++ b/Web_lr1/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Kebets Vladislav 75">
     <title>Прайс лист мобильных телефонов</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <div class="popup">
         <h1 class="popup-title" id="header-title">
-          Прайс-лист мобильных телефонов
+          <strong>Прайс-лист мобильных телефонов <sup><small>text</small></sup></strong>
         </h1>
         <p class="popup-text" id="header-text">
-          Tokyo Ghoul (Japanese: 東京喰種トーキョーグール, Hepburn: Tōkyō Gūru)
+          <small><u><em>Tokyo Ghoul</em></u> <i>(Japanese: 東京喰種トーキョーグール, Hepburn: Tōkyō Gūru)</i>
           is a Japanese dark fantasy manga series written and illustrated by Sui
           Ishida. It was serialized in Shueisha's seinen manga magazine Weekly
           Young Jump from September 2011 to September 2014, with its chapters
@@ -23,144 +24,186 @@
           a college student who is transformed into a half-ghoul after an
           encounter with one of them. He must navigate the complex social and
           political dynamics between humans and ghouls while struggling to
-          maintain his humanity. A prequel, titled Tokyo Ghoul [Jack], ran
+          maintain his humanity. A prequel, titled Tokyo Ghoul <s>[Jack]</s>, ran
           online on Jump Live in 2013, with its chapters collected in a single
           tankōbon volume. A sequel, titled Tokyo Ghoul:re, was serialized in
           Weekly Young Jump from October 2014 to July 2018, its chapters were
-          collected in 16 tankōbon volumes
+          collected in 16 tankōbon volumes</small>
         </p>
       </div>
     </header>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <div class="product-card">
-      <img class="product-image" src="" alt="" />
-      <h3 class="product-name"></h3>
-      <ul class="product-characters">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
+    <main>
+      <div class="container">
+        <a href="https://catalog.onliner.by/mobile/xiaomi/note14pp5g512pr2" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/eNQFcKHg9HQA0xV_Jo47hy3664_R883azphrp0tb66M/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvYThlMzQ5NWU2/MDAzYzA3OTAxMDM0/ZWI1OTA5OWZhMTku/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Xiaomi Redmi Note 14 Pro</h3>
+          <ul class="product-characters">
+            <li>Экран 6.67" AMOLED (1220x2712) 120 Гц</li>
+            <li>Qualcomm Snapdragon 7s Gen 3</li>
+            <li>ОЗУ 12 ГБ</li>
+            <li>Аамять 512 ГБ</li>
+            <li>Камера 200 Мп</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/apple/iphone15promaxnt" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/io_FkrG8pgf2iVk6F5z2vSLacHQ8LVEc7RmVzXVG1vg/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvY2U4MDNhZjNj/ODkyNTZiYTU1NTlm/ZmVkMWI4YzNjZDku/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Apple iPhone 15 Pro Max 256GB</h3>
+          <ul class="product-characters">
+            <li>Apple iOS</li>
+            <li>OLED (1290x2796) 120 Гц</li>
+            <li>ОЗУ 8 ГБ</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/samsung/sma556ezkacau" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/eVaWCM50vcB89UeatJwSoUtt-afPjgdzvjdxrz82V1A/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvZTA0NDQ2YjFh/M2QyMjM0YTQ0YTMz/YTY4ZmFkOTFiOWQu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Samsung Galaxy A55 SM-A556E 8GB/128GB</h3>
+          <ul class="product-characters">
+            <li>Android</li>
+            <li>экран 6.6" AMOLED (1080x2340) 120 Гц</li>
+            <li>Exynos 1480</li>
+            <li>ОЗУ 8 ГБ</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/samsung/sms938bzkbcau" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/nKh71kqeF6N5CfdudYB4t5S0euOGRSr4gXWSuN-H-Yo/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvMWIwMWExNzI0/ZDA3ZDY0OTU0NzE5/YjA5NmE5Nzg1Mjcu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Samsung Galaxy S25 Ultra</h3>
+          <ul class="product-characters">
+            <li>Qualcomm Snapdragon 8 Elite</li>
+            <li>ОЗУ 12 ГБ</li>
+            <li>память 256 ГБ</li>
+            <li>камера 200 Мп</li>
+            <li>аккумулятор 5000 мАч</li>
+            <li>2 SIM</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/google/gp912128o" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/d-OX16yCB_y3lZGd7nUs0Wn2r9Rnjj39Z4AfKlggFEA/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvYjk2OTM4Mzg1/MTdiOGYwNGNhZDAw/NzgzMWMxYWRjY2Qu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Google Pixel 9 12GB/128GB (обсидиан)</h3>
+          <ul class="product-characters">
+            <li>Google Tensor G4</li>
+            <li>аккумулятор 4700 мАч</li>
+            <li>Android</li>
+            <li>влагозащита IP68</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/xiaomi/note14pp5g512pr2" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/XEFC8RZcqsHE4_3MM4e-2LjEPEik-1ATHynNPjQUDU8/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvODE0OGZiMTc1/MWE3ZTYxMTQ5YTU1/ZGJlY2IzNDcwNTcu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Xiaomi Redmi Note 14</h3>
+          <ul class="product-characters">
+            <li>Android</li>
+            <li>камера 108 Мп</li>
+            <li>Mediatek Helio G99-Ultra</li>
+            <li>поддержка карт памяти</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/apple/iphone15lbl" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/XCfB_0iDxbZ8aAPfTw3Ix8PwTdHooA0QzP6gTYSvIIo/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvNDQwYmIzOGFj/MDY2YWE0NGMxNWZj/NDAxMjIxYWRjOWIu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Apple iPhone 15 128GB (голубой)</h3>
+          <ul class="product-characters">
+            <li>Apple iOS</li>
+            <li>экран 6.1" OLED (1179x2556) 60 Гц</li>
+            <li>Apple A16 Bionic</li>
+            <li>ОЗУ 6 ГБ</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/xiaomi/xr14cgl8256sb" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/12Dsfi--iXXy_d1vrOOJ1dsGSOU0_dJLHvKvHpqsAyQ/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvMjU0ZGY0NzI1/NTU4OTkwOThiYzBm/ZjVkMzMxZmMwZWIu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Xiaomi Redmi 14C 8GB/256GB</h3>
+          <ul class="product-characters">
+            <li>Android</li>
+            <li>экран 6.88" IPS (720x1640) 120 Гц</li>
+            <li>Mediatek Helio G81 Ultra</li>
+            <li>ОЗУ 8 ГБ</li>
+            <li>память 256 ГБ</li>
+            <li>поддержка карт памяти</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/honor/x8c8256wh" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/yODiHojAVGJdRqU-jEJ7zd-u9LuJkKerv0Byf9YySNI/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvYjY4YTQyYWJk/Y2FhNmI5NDU4Zjgz/NGYzNDQyMzhmNjIu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">HONOR X8c ABR-LX1 8GB/256GB</h3>
+          <ul class="product-characters">
+            <li>экран 6.7" AMOLED (1080x2412) 120 Гц</li>
+            <li>влагозащита IP64</li>
+            <li>Qualcomm Snapdragon 685</li>
+            <li>ОЗУ 8 ГБ</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/samsung/sma356elbdcau" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/vTsqO2-xuy7Rmg0LZmAWH_uivCsU2IMTOEfLeQy0kC0/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvYmMyODNiMDk4/ZDdiZjBlZjk0YTMx/OWRhM2EwYTZmMzAu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">Samsung Galaxy A35</h3>
+          <ul class="product-characters">
+            <li>влагозащита IP67</li>
+            <li>память 128 ГБ</li>
+            <li>ОЗУ 8 ГБ</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/poco/pocox7pro512bk" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/-EMsRfq9PiisB5BjwpzwGLPe-972q_kO6UDuzQEhOQ0/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvODFkYTc3YzFl/NTMzZGRjNjk2YmNi/YzEyNDM5ZmVkMmIu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">POCO X7 Pro 12GB/512GB</h3>
+          <ul class="product-characters">
+            <li>Mediatek Dimensity 8400 Ultra</li>
+            <li>ОЗУ 12 ГБ</li>
+          </ul>
+        </a>
+        <a href="https://catalog.onliner.by/mobile/honor/h200pro12512bk" class="product-card" target="_blank">
+          <img
+            class="product-image"
+            src="https://imgproxy.onliner.by/dHS8zW0Eav6svzbzHzC_v0G_yG-qBH8MbclVc28yJwI/w:170/h:250/z:2/f:jpg/aHR0cHM6Ly9jb250/ZW50Lm9ubGluZXIu/YnkvY2F0YWxvZy9k/ZXZpY2Uvb3JpZ2lu/YWwvNjhmYjdlNTJj/YzQ0MDc2NjhkYjIx/ZDgyZDU2ZWNjMTcu/anBn"
+            alt="product-image"
+          >
+          <h3 class="product-name">HONOR 200 Pro 12GB/512GB</h3>
+          <ul class="product-characters">
+            <li>экран 6.78" AMOLED (1224x2700) 120 Гц</li>
+            <li>Qualcomm Snapdragon 8s Gen 3</li>
+            <li>ОЗУ 12 ГБ</li>
+          </ul>
+        </a>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
